<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/xanadu"
        app:layout_constraintTop_toTopOf="parent" 
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/toolbar_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cost_service"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:hint="Cost of Service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

   <RadioGroup
       android:id="@+id/percentage_choice"
       android:checkedButton="@+id/radio_button_1"
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       app:layout_constraintTop_toBottomOf="@+id/cost_service">

       <androidx.appcompat.widget.AppCompatRadioButton
           android:id="@+id/choice1"
           android:layout_width="wrap_content"
           android:layout_height="48dp"
           android:layout_marginStart="22dp"
           android:buttonTint="@color/xanadu"
           android:text="@string/radio_button_1"
           />

       <androidx.appcompat.widget.AppCompatRadioButton
           android:id="@+id/choice2"
           android:layout_width="wrap_content"
           android:layout_height="48dp"
           android:layout_marginStart="15dp"
           android:buttonTint="@color/xanadu"
           android:text="@string/radio_button_2"
           />

       <androidx.appcompat.widget.AppCompatRadioButton
           android:id="@+id/choice3"
           android:layout_width="wrap_content"
           android:layout_height="48dp"
           android:layout_marginStart="15dp"
           android:buttonTint="@color/xanadu"
           android:text="@string/radio_button_3"
           />
   </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:text="@string/tips_description"
        app:layout_constraintTop_toBottomOf="@+id/percentage_choice"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switches_round_up"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:checked="true"
        android:text="@string/switches"
        app:thumbTint="@color/xanadu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_tips"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calculate_button"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:text="@string/calculate"
        style="@style/Button"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switches_round_up"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tip_ammount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginStart="300dp"
        android:layout_marginTop="10dp"
        android:text="@string/ammount_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/email"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_ammount"/>

</androidx.constraintlayout.widget.ConstraintLayout>